# SmartTV-SeriesVidaaU5

./: README.md  kernel  uboot
JRTP/: pax_global_header
JRTP/JRTPLIB-3.11.2/cmake/: FindLIBSRTP2.cmake
Libctag/: pax_global_header
apr/: pax_global_header
cJSON/: pax_global_header
cares/: pax_global_header
flac/: pax_global_header
fuse/: pax_global_header
fuse-ext2/: pax_global_header
gphotofs/: pax_global_header
jsoncpp/: pax_global_header
libcurl/: pax_global_header
libdbus/: pax_global_header
libdbus-glib/: pax_global_header
libdbus-glib/dbus-glib-dbus-glib-0.108/: .gitignore  HACKING  Makefile.am  NEWS  autogen.sh  configure.ac
libdbus-glib/dbus-glib-dbus-glib-0.108/dbus/: Makefile.am  dbus-glib.c  dbus-gmain.c  dbus-gtool-test.h
libdbus-glib/dbus-glib-dbus-glib-0.108/test/: Makefile.am
libdbus-glib/dbus-glib-dbus-glib-0.108/test/lib/: Makefile.am  util.c  util.h
libdbus-glib/dbus-glib-dbus-glib-0.108/tools/: Makefile.am  dbus-glib-tests.supp  dbus-glib.supp
libdbus/dbus-dbus-1.13.16/: .gitlab-ci.yml  CMakeLists.txt  NEWS  README.cmake  configure.ac
libexpat/libexpat-R_2_2_9/: pax_global_header
liboauth/: pax_global_header
libogg/: pax_global_header
libpng/: pax_global_header
libunwind/: pax_global_header
libxml/: pax_global_header
libzint/zint-2.4.2/: zint.nsi
libzint/zint-2.4.2/win32/: libzint.vcproj  (+1 more)
nghttp2/: pax_global_header
openssl/: pax_global_header
rapidjson/: pax_global_header
sqlite/: pax_global_header
taglib/: pax_global_header
tls/gnutls-3.6.0/: ChangeLog  Makefile.in  config.h.in  configure
(+206 files in other folders)
